--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Hunter Loftis <hunter@hunterloftis.com>",
   "license": "ISC",
   "engines": {
-    "node": "0.10.x"
+    "iojs": "1.0.x"
   },
   "dependencies": {
     "express": "^4.11.0",
