--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "iojs": "1.0.x"
   },
   "dependencies": {
-    "express": "^4.11.0",
+    "express": "^4.11.0"
     "throng": "^1.0.0"
   }
 }
