--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "iojs": "1.0.x"
   },
   "dependencies": {
+    "blitzkrieg": "^1.0.0",
     "express": "^4.11.0",
     "throng": "^1.0.0"
   }
