--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "author": "Hunter Loftis <hunter@hunterloftis.com>",
   "license": "ISC",
   "engines": {
-    "iojs": "3.0.0"
+    "node": "6.10.3"
   },
   "dependencies": {
     "blitzkrieg": "1.0.0",
-    "event-loop-lag": "1.1.0",
-    "express": "4.13.3",
-    "throng": "1.0.0"
+    "event-loop-lag": "1.2.0",
+    "express": "4.15.2",
+    "throng": "4.0.0"
   }
 }
