--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "author": "Hunter Loftis <hunter@hunterloftis.com>",
   "license": "ISC",
   "engines": {
-    "node": "6.10.3"
+    "node": "10.15.0",
+    "yarn": "6.4.1"
   },
   "dependencies": {
-    "blitzkrieg": "1.0.0",
-    "event-loop-lag": "1.2.0",
-    "express": "4.15.2",
-    "throng": "4.0.0"
+    "express": "^4.16.4",
+    "throng": "^4.0.0"
   }
 }
