--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "engines": {
     "node": "10.15.0",
-    "yarn": "6.4.1"
+    "npm": "6.4.1"
   },
   "dependencies": {
     "express": "^4.16.4",
